Work on remove elements is stalled

--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,16 @@
+
 .container{
     display:flex;
     width : 960px;
     height : 960px;
-    /* padding:25px; */
-    
-    /* flex-wrap: wrap; */
-    /* justify-content: space-between;
-     align-items: space-between;  */
-    /* //align-items: center; */
-    /* background-color: grey; */
+};
 
+.userbtn{
+    padding:125px;
 }
+/*
+.nmchild {
 
-.grid{
-    border :"0.05px dotted gray";
-    flex : "1";
-}
-/* 
-.grid:hover{
-    background-color: aqua;
-    transition: all 1s ease-out;
-} */
+    border :0.05px dotted gray;
+    flex : 1;
+}; */
